Contribuyente entity and basic CRUD Controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.username=${COBROSALCALDIA_USER}
 spring.datasource.password=${COBROSALCALDIA_PASSWORD}
 
 # mysql config
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
@@ -16,6 +17,6 @@ jwt.secret=${COBROSALCALDIA_JWT_SECRET}
 # 1 h = 3600 segundos, 31536000 segundos = 1 año
 token.expiration.time.seconds=31536000
 
-#debug=true
-logging.level.org.hibernate.SQL=debug
+debug=false
+#logging.level.org.hibernate.SQL=debug
 
