Timestamp correction time of El Salvador

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/townhallsv?serverTimezone=UTC
 #spring.datasource.username=root
 #spring.datasource.password=
-#spring.datasource.url=${COBROSALCALDIA_DATASOURCE_URL}
-spring.datasource.url=jdbc:mysql://sql292.main-hosting.eu/u448952548_mercado?serverTimezone=America/El_Salvador
+spring.datasource.url=${COBROSALCALDIA_DATASOURCE_URL}
+
 
 spring.datasource.username=${COBROSALCALDIA_USER}
 spring.datasource.password=${COBROSALCALDIA_PASSWORD}
