--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,6 @@ jwt.secret=${COBROSALCALDIA_JWT_SECRET}
 token.expiration.time.seconds=31536000
 
 #debug=true
-logging.level.org.hibernate.SQL=debug
-
+#logging.level.org.hibernate.SQL=debug
+#spring.jpa.show-sql=true
+debug=true
