--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,12 @@ token.expiration.time.seconds=31536000
 #logging.level.org.hibernate.SQL=debug
 spring.jpa.show-sql=true
 #debug=true
+
+server.compression.enabled=true
+server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json
+
+# Compress the response only if the response size is at least 1KB
+server.compression.min-response-size=1024
+
+# Enable HTTP/2 support, if the current environment supports it
+server.http2.enabled=true
