--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
                 </exclusion>
             </exclusions>-->
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-rest-core</artifactId>
+            <version>2.1.0.RELEASE</version>
+        </dependency>
 
         <!-- Include jetty dependency -->
         <!--<dependency>
@@ -93,6 +98,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.1.9.RELEASE</version>
+                <configuration>
+                    <mainClass>com.fernando9825.alcaldiasvrestapi.AlcaldiasvRestapiApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
