--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/townhallsv?serverTimezone=UTC
 #spring.datasource.username=root
 #spring.datasource.password=
-spring.datasource.url=${COBROSALCALDIA_DATASOURCE_URL}
+#spring.datasource.url=${COBROSALCALDIA_DATASOURCE_URL}
+spring.datasource.url=jdbc:mysql://sql292.main-hosting.eu/u448952548_mercado?zeroDateTimeBehavior=convertToNull&verifyServerCertificate=false&useSSL=false&requireSSL=false
 #spring.datasource.url=''
 
 
