*!* url Hard coded to Host at Local

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 #spring.datasource.username=root
 #spring.datasource.password=
 #spring.datasource.url=${COBROSALCALDIA_DATASOURCE_URL}
-spring.datasource.url=jdbc:mysql://sql292.main-hosting.eu/u448952548_mercado?zeroDateTimeBehavior=convertToNull&verifyServerCertificate=false&useSSL=false&requireSSL=false
+spring.datasource.url=jdbc:mysql://localhost/u448952548_mercadosm?zeroDateTimeBehavior=convertToNull&verifyServerCertificate=false&useSSL=false&requireSSL=false
 #spring.datasource.url=''
 
 
