--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/townhallsv?serverTimezone=UTC
 #spring.datasource.username=root
 #spring.datasource.password=
-#spring.datasource.url=${COBROSALCALDIA_DATASOURCE_URL}
-spring.datasource.url=jdbc:mysql://localhost/u448952548_mercadosm?zeroDateTimeBehavior=convertToNull&verifyServerCertificate=false&useSSL=false&requireSSL=false
+spring.datasource.url=${COBROSALCALDIA_DATASOURCE_URL}
+#spring.datasource.url=jdbc:mysql://localhost/u448952548_mercadosm?zeroDateTimeBehavior=convertToNull&verifyServerCertificate=false&useSSL=false&requireSSL=false
 #spring.datasource.url=''
 
 
