--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,3 +46,10 @@ server.compression.min-response-size=1024
 
 # Enable HTTP/2 support, if the current environment supports it
 server.http2.enabled=true
+
+server.connection-timeout=30000
+server.tomcat.max-connections=8192
+server.tomcat.max-threads=200
+server.tomcat.accept-count=100
+server.tomcat.keep-alive-timeout=5000
+spring.datasource.hikari.maximum-pool-size=30
